--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="https://github.com/er-s-jaiswal/cv/blob/main/image/SHUDHANSHU%20JAISWAL.png?raw=true" alt="S_Jaiswal DP">
+                <img src="image/SHUDHANSHU%20JAISWAL.png?raw=true" alt="S_Jaiswal DP">
             </td>
         
         <td>
