--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         </tr>
     </table>
     <hr>
-    <a href="G:\Web Development\HTML-Personal_Site\myHobbies.html">My Hobbies</a>
-    <a href="G:\Web Development\HTML-Personal_Site\myContact.html">Contact Me</a>
+    <a href="myHobbies.html">My Hobbies</a>
+    <a href="myContact.html">Contact Me</a>
     
 </body>
 </html>
